feat: Support for arguments for Actions feat: New class Linker. Used for storing and cleanin up GObject connections and bindings feat: New singleton metaclasses Singleton (for not GObject classes) and GSignleton (for GObject classes) chore: bump minimup python version to 3.12 chore: use 2-spaces indentation chore: removed Constants class since it was useless garbage

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
     },
     "search.followSymlinks": false,
     "[python]": {
-        "editor.defaultFormatter": "ms-python.black-formatter",
+        "editor.defaultFormatter": "charliermarsh.ruff",
         "editor.formatOnSave": true,
         "editor.codeActionsOnSave": {
             "source.organizeImports": "explicit"
@@ -22,5 +22,11 @@
     "pylint.enabled": true,
     "mesonbuild.configureOnOpen": false,
     "mesonbuild.buildFolder": "_build",
-    "mesonbuild.mesonPath": "${workspaceFolder}/.flatpak/meson.sh"
+    "mesonbuild.mesonPath": "${workspaceFolder}/.flatpak/meson.sh",
+    "[xml]": {
+        "editor.rulers": [90] // Just for text, like in descriptions, ignore for links, tags, e.t.c
+    },
+    "[markdown]": {
+        "editor.rulers": [90] // Just for text, ignore for links, tags, e.t.c
+    },
 }
