--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [project]
 name = "dgutils"
 version = "0.1.0"
-description = "A GTK apps develompment easement"
+description = "A GTK apps development easement"
 authors = [
     { name="Dzheremi", email="chichvarov1315@gmail.com" }
 ]
 license = { file = "LICENSE" }
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.12"
 
 dependencies = [
     "PyGObject>=3.42",
@@ -26,3 +26,71 @@ package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.ruff]
+indent-width = 2
+line-length = 88
+
+[tool.ruff.lint]
+select = ["ALL"]
+ignore = [
+  "ANN002",
+  "ANN003",
+  "ANN202",
+  "ANN401",
+  "ARG004",
+  "BLE001",
+  "C901",
+  "COM812",
+  "D100",
+  "D101",
+  "D102",
+  "D104",
+  "D105",
+  "D107",
+  "D400",
+  "D401",
+  "D413",
+  "D415",
+  "E402",
+  "E501",
+  "E701",
+  "EM101",
+  "EM102",
+  "EXE003",
+  "FBT001",
+  "FBT002",
+  "FBT003",
+  "N812",
+  "N818",
+  "PLC0415",
+  "PLR0912",
+  "PLR0913",
+  "PLR0915",
+  "PLR2004",
+  "PLW0603",
+  "PLW2901",
+  "PTH118",
+  "PTH123",
+  "RET503",
+  "RUF012",
+  "RUF028",
+  "TD001",
+  "TD002",
+  "TD003",
+  "TRY003",
+  "TRY300",
+  "UP007",
+  "UP045",  
+  "UP035",
+]
+
+[tool.ruff.lint.flake8-annotations]
+suppress-dummy-args = true
+
+[tool.ruff.format]
+indent-style = "space"
+
+[tool.ruff.lint.pydocstyle]
+convention = "numpy"
+property-decorators = ["gi.repository.GObject.Property"]
